--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Calucladora de mascaras caseiras, veja o tutorial, baixe os moldes e saiba quanto de material vai precisar!">
-    <meta name="keywords" content="calculadora, mascaras, caseira, artesanal, mascara, covid, pandemia, sem maquina, manual, tutorial">
+    <meta name="keywords" content="como fazer uma mascara, faça a sua mascara,calculadora, mascaras, caseira, artesanal, mascara, covid, pandemia, sem maquina, manual, tutorial, calcular, molde, covid19, covid-19, corona virus, cobate a pandemia, mascara tecido, mascara artesanal, mascara de pano, tecido mascara">
     <meta name="author" content="Jonathas Costa - jonathascostadev@gmail.com">
+    <meta name="google-site-verification" content="QJwEdbiLwQApANEoSFvTWV57C5sQnyPXVRGsoUClcG4" />
     <link rel=”canonical” href=”http://calculadorademascaras.epizy.com/” />
 
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
